--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.RegisterActivity"></activity>
-        <activity android:name=".activities.LoginActivity" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:label="@string/title_activity_login"/>
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:label="@string/title_activity_register"/>
         <activity
             android:name=".activities.PlacesActivity"
             android:label="@string/title_activity_places"
